Fix calc view bugs on mobile.

--- a/styles/sections/my-works-section.scss
+++ b/styles/sections/my-works-section.scss
@@ -52,12 +52,12 @@
     min-height: 300px;
     width: 350px;
     height: 450px;
-    padding: 5px;
+    padding: 4px;
     margin-bottom: 50px;
 
     display: grid;
     grid-template: 5rem repeat(5, 1fr) / repeat(4, 1fr);
-    gap: 5px;
+    gap: 4px;
 
     border: 0.1px solid $text-color-black;
 
@@ -100,6 +100,7 @@
 
 .calc-body>button {
     font: 2rem "Inter Thin";
+
     user-select: none;
     appearance: none;
     -webkit-apearance: none;
